Placed all image assets for site in one folder

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="col-sm-12">
                 <a href='#' class='link hvr-bob' id='home-link'>Home</a>
                 <a href='https://www.etsy.com/shop/AbbottArtistry' target='blank' class='link hvr-bob' id='product-link'>Shop</a>
-                <a href='#'><img class='hvr-grow' id='main-logo' src='./abbott-artistry-logo-finished.png'></a>
+                <a href='#'><img class='hvr-grow' id='main-logo' src='./image-assets/abbott-artistry-logo-finished.png'></a>
                 <a href='#' class='link hvr-bob' id='gallery-link'>Gallery</a>
                 <a href='#' class='link hvr-bob' id='contact-link'>Contact</a>
                 
@@ -75,18 +75,18 @@
             <div class="col-sm-3 text-center">
                 <br>
                 <br>
-                <img id='featured1' src='./teether1.jpg'> 
+                <img id='featured1' src='./image-assets/teether1.jpg'> 
                 <br>
                 <br>
-                <img id='featured2s' src='./teethmodel6.JPG'>
+                <img id='featured2s' src='./image-assets/teethmodel6.JPG'>
             </div>
             <div class="col-sm-3 text-center">
                 <br>
                 <br>
-                <img id='featured2' src='./teethmodel4.JPG'>
+                <img id='featured2' src='./image-assets/teethmodel4.JPG'>
                 <br>
                 <br>
-                <img id='featured1' src='./teether2.jpg'>
+                <img id='featured1' src='./image-assets/teether2.jpg'>
                 <br>
                 <br>
                 <a href='#' class='link hvr-glow' id='learn-more'>Click here to learn more</a>
@@ -118,7 +118,7 @@
             <!--<div class="col-sm-4">
                 <br>
                 <br>
-                <img id='featured1b' src='./macrame_edit.jpeg'>
+                <img id='featured1b' src='./image-assets/macrame_edit.jpeg'>
             </div>-->
             <div class="col-sm-12 text-left feature-details">
                 <br>
@@ -153,25 +153,25 @@
                 <div class="col-sm-3 hvr-glow" style='margin-top:15px'>
                     <br>
                     <br>
-                    <img src='./Screen Shot 2018-10-08 at 12.31.05 PM.png' id='gal-image'>
+                    <img src='./image-assets/Screen Shot 2018-10-08 at 12.31.05 PM.png' id='gal-image'>
                     <p id='gal-description'>Wedding Cake Display</p>
                 </div>
                 <div class="col-sm-3 hvr-glow" style='margin-top:15px'>
                     <br>
                     <br>
-                    <img src='./Screen Shot 2018-10-08 at 12.32.34 PM.png' id='gal-image'>
+                    <img src='./image-assets/Screen Shot 2018-10-08 at 12.32.34 PM.png' id='gal-image'>
                     <p id='gal-description'>Beautiful Wall Hanging</p>
                 </div>
                 <div class="col-sm-3 hvr-glow" style='margin-top:15px'>
                     <br>
                     <br>
-                    <img src='./macrame_edit_crop.jpeg' id='gal-image'>
+                    <img src='./image-assets/macrame_edit_crop.jpeg' id='gal-image'>
                     <p id='gal-description'>Plant Hanger</p>
                 </div> 
                 <div class="col-sm-3 hvr-glow" style='margin-top:15px'>
                     <br>
                     <br>
-                    <img src='./Screen Shot 2018-10-08 at 12.31.24 PM.png' id='gal-image'>
+                    <img src='./image-assets/Screen Shot 2018-10-08 at 12.31.24 PM.png' id='gal-image'>
                     <p id='gal-description'>Stunning Wedding Backdrop</p>
                 </div>
             </div>
@@ -180,25 +180,25 @@
                 <div class="col-sm-3 hvr-glow">
                     <br>
                     <br>
-                    <img src='./macrame-gal-edit.jpeg' id='gal-image'>
+                    <img src='./image-assets/macrame-gal-edit.jpeg' id='gal-image'>
                     <p id='gal-description'>Wall Hanging</p>
                 </div>
                 <div class="col-sm-3 hvr-glow">
                     <br>
                     <br>
-                    <img src='./Screen Shot 2018-10-08 at 12.31.41 PM.png' id='gal-image'>
+                    <img src='./image-assets/Screen Shot 2018-10-08 at 12.31.41 PM.png' id='gal-image'>
                     <p id='gal-description'>Plant Hanger On Wicker Wall</p>
                 </div>
                 <div class="col-sm-3 hvr-glow">
                     <br>
                     <br>
-                    <img src='./Screen Shot 2018-10-08 at 12.32.13 PM.png' id='gal-image'>
+                    <img src='./image-assets/Screen Shot 2018-10-08 at 12.32.13 PM.png' id='gal-image'>
                     <p id='gal-description'>Arrow Macrame</p>
                 </div> 
                 <div class="col-sm-3 hvr-glow">
                     <br>
                     <br>
-                    <img src='./Screen Shot 2018-10-08 at 12.32.19 PM.png' id='gal-image'>
+                    <img src='./image-assets/Screen Shot 2018-10-08 at 12.32.19 PM.png' id='gal-image'>
                     <p id='gal-description'>Plant Hangers - Be Still My Soul</p>
                 </div>
             </div>
