--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./index.css">
-    <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Open+Sans+Condensed:300|Satisfy|PT+Sans+Narrow" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Open+Sans+Condensed:300|Satisfy|PT+Sans+Narrow|Amatic+SC" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </head>
 
 <body>
@@ -23,7 +21,7 @@
                 <a href='#' class='link hvr-bob' id='home-link'>Home</a>
                 <a href='https://www.etsy.com/shop/AbbottArtistry' target='blank' class='link hvr-bob' id='product-link'>Shop</a>
                 <a href='#'><img class='hvr-grow' id='main-logo' src='./image-assets/abbott-artistry-logo-finished.png'></a>
-                <a href='#' class='link hvr-bob' id='gallery-link'>Gallery</a>
+                <a href='./gallery.html' class='link hvr-bob' id='gallery-link'>Gallery</a>
                 <a href='#' class='link hvr-bob' id='contact-link'>Contact</a>
                 
             </div>
@@ -39,7 +37,7 @@
     <div class="welcome">
         <div class="row">
             <div class="col-sm-12 text-center">
-                <p class='slogan'>| <em><strong>Quality, Handmade-To-Order Macramé And Crafts</strong></em> |</p>
+                <p class='slogan'><strong>Quality, Handmade-To-Order Macramé And Crafts</strong></p>
             </div>
         </div>
         <!-- <div class="row stars">
@@ -207,7 +205,7 @@
             <br>
             <div class="row">
                 <div class="col-sm-12 text-center">
-                    <a href='#' class='link hvr-glow' id='learn-more'>See Full Gallery</a>
+                    <a href='./gallery.html' class='link hvr-glow' id='learn-more'>See Full Gallery</a>
                 </div>
             </div>
             <br>
@@ -227,7 +225,7 @@
             <div class="col-sm-12 text-center">
                 <br>
                 <br>
-                <span class="fa fa-phone hvr-shrink">  (435) 503-7540</span> 
+                <span class="fa fa-phone hvr-shrink"> (435) 503-7540</span> 
                 <span class="fa fa-envelope-o hvr-shrink">  abbottartistry@gmail.com</span>
             </div>
         </div>
