--- a/gallery.html
+++ b/gallery.html
@@ -40,6 +40,11 @@
                 <p class='slogan'><strong>Gallery</strong></p>
             </div>
         </div>
+        <div class="row">
+            <div class="col-sm-12 text-center">
+                <p class='slogan' style='font-size:30px'>If you love something...Let us know!</p>
+            </div>
+        </div>
         <!-- <div class="row stars">
             <div class="col-sm-12">
                     <i class="large material-icons">star</i>
