--- a/gallery.html
+++ b/gallery.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel='shortcut icon' href='./image-assets/single-branch-left.png'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./gallery.css">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Open+Sans+Condensed:300|Satisfy|PT+Sans+Narrow|Amatic+SC" rel="stylesheet">
@@ -17,21 +18,29 @@
 <body>
     <div class="header">
         <div class="row">
-            <div class="col-sm-12">
-                <a href='./index.html' class='link hvr-bob' id='home-link'>Home</a>
+            <div class="col-sm-1"></div>
+            <div class="col-sm-1 text-center">
+                <a href='./index-test.html' class='link hvr-bob' id='home-link'>Home</a>
+            </div>
+            <div class="col-sm-2 text-center">
                 <a href='https://www.etsy.com/shop/AbbottArtistry' target='blank' class='link hvr-bob' id='product-link'>Shop</a>
+            </div>
+            <div class="col-sm-4">
                 <a href='#'><img class='hvr-grow' id='main-logo' src='./image-assets/abbott-artistry-logo-finished.png'></a>
+                <div class="col-sm-12">
+                    <a href="#" class="fa fa-facebook hvr-shrink"></a>
+                    <a href="https://www.instagram.com/abbottartistry/" class="fa fa-instagram hvr-shrink"></a>
+                    <a href="tel:4066335122" class="fa fa-phone hvr-shrink"></a>
+                    <a href="mailto:macramebylizzy@gmail.com" class="fa fa-envelope-o hvr-shrink"></a>
+                </div>
+            </div>
+            <div class="col-sm-2 text-center">
                 <a href='./gallery.html' class='link hvr-bob' id='gallery-link'>Gallery</a>
-                <a href='#' class='link hvr-bob' id='contact-link'>Contact</a>
-                
             </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-12">
-                <a href="#" class="fa fa-facebook hvr-shrink"></a>
-                <a href="#" class="fa fa-instagram hvr-shrink"></a>
-                <a href="mailto:macramebylizzy@gmail.com" class="fa fa-envelope-o hvr-shrink"></a>
+            <div class="col-sm-1 text-center">
+                <a href='./contact.html' class='link hvr-bob' id='contact-link'>Contact</a> 
             </div>
+            <div class="col-sm-1"></div>
         </div>
     </div>
     <div class="welcome">
@@ -45,182 +54,12 @@
                 <p class='slogan' style='font-size:30px'>If you love something...Let us know!</p>
             </div>
         </div>
-        <!-- <div class="row stars">
-            <div class="col-sm-12">
-                    <i class="large material-icons">star</i>
-                    <i class="large material-icons">star</i>
-                    <i class="large material-icons">star</i>
-                    <i class="large material-icons">star</i>
-                    <i class="large material-icons">star</i>
-            </div>
-        </div> -->
     </div>
-    <div class='gallery'>
+    <div class="pixlee-widget">
         <div class="row">
-            <div class="col-sm-3 hvr-glow" style='margin-top:15px'>
-                <br>
-                <br>
-                <img src='./image-assets/Screen Shot 2018-10-08 at 12.31.05 PM.png' id='gal-image'>
-                <p id='gal-description'>Wedding Cake Display</p>
-            </div>
-            <div class="col-sm-3 hvr-glow" style='margin-top:15px'>
-                <br>
-                <br>
-                <img src='./image-assets/Screen Shot 2018-10-08 at 12.32.34 PM.png' id='gal-image'>
-                <p id='gal-description'>Beautiful Wall Hanging</p>
-            </div>
-            <div class="col-sm-3 hvr-glow" style='margin-top:15px'>
-                <br>
-                <br>
-                <img src='./image-assets/macrame_edit_crop.jpeg' id='gal-image'>
-                <p id='gal-description'>Plant Hanger</p>
-            </div> 
-            <div class="col-sm-3 hvr-glow" style='margin-top:15px'>
-                <br>
-                <br>
-                <img src='./image-assets/Screen Shot 2018-10-08 at 12.31.24 PM.png' id='gal-image'>
-                <p id='gal-description'>Stunning Wedding Backdrop</p>
-            </div>
-        </div>
-        <br>
-        <div class="row">
-            <div class="col-sm-3 hvr-glow">
-                <br>
-                <br>
-                <img src='./image-assets/macrame-gal-edit.jpeg' id='gal-image'>
-                <p id='gal-description'>Wall Hanging</p>
-            </div>
-            <div class="col-sm-3 hvr-glow">
-                <br>
-                <br>
-                <img src='./image-assets/Screen Shot 2018-10-08 at 12.31.41 PM.png' id='gal-image'>
-                <p id='gal-description'>Plant Hanger On Wicker Wall</p>
-            </div>
-            <div class="col-sm-3 hvr-glow">
-                <br>
-                <br>
-                <img src='./image-assets/Screen Shot 2018-10-08 at 12.32.13 PM.png' id='gal-image'>
-                <p id='gal-description'>Arrow Macrame</p>
-            </div> 
-            <div class="col-sm-3 hvr-glow">
-                <br>
-                <br>
-                <img src='./image-assets/Screen Shot 2018-10-08 at 12.32.19 PM.png' id='gal-image'>
-                <p id='gal-description'>Plant Hangers - Be Still My Soul</p>
+            <div class="col-sm-12" style='margin-right:0%;margin-left:0%'>
+                <div id="pixlee_container" class='pixlee'></div><script type="text/javascript">window.PixleeAsyncInit = function() {Pixlee.init({apiKey:'yCrKgQwBkm1A4ckxBayk'});Pixlee.addSimpleWidget({widgetId:'10116'});};</script><script src="https://instafeed.assets.pixlee.com/assets/pixlee_widget_1_0_0.js"></script>            
             </div>
         </div>
     </div>
-    <div class='gallery'>
-        <div class="row">
-            <div class="col-sm-3 hvr-glow" style='margin-top:15px'>
-                <br>
-                <br>
-                <img src='./image-assets/Screen Shot 2018-10-08 at 12.31.05 PM.png' id='gal-image'>
-                <p id='gal-description'>Wedding Cake Display</p>
-            </div>
-            <div class="col-sm-3 hvr-glow" style='margin-top:15px'>
-                <br>
-                <br>
-                <img src='./image-assets/Screen Shot 2018-10-08 at 12.32.34 PM.png' id='gal-image'>
-                <p id='gal-description'>Beautiful Wall Hanging</p>
-            </div>
-            <div class="col-sm-3 hvr-glow" style='margin-top:15px'>
-                <br>
-                <br>
-                <img src='./image-assets/macrame_edit_crop.jpeg' id='gal-image'>
-                <p id='gal-description'>Plant Hanger</p>
-            </div> 
-            <div class="col-sm-3 hvr-glow" style='margin-top:15px'>
-                <br>
-                <br>
-                <img src='./image-assets/Screen Shot 2018-10-08 at 12.31.24 PM.png' id='gal-image'>
-                <p id='gal-description'>Stunning Wedding Backdrop</p>
-            </div>
-        </div>
-        <br>
-        <div class="row">
-            <div class="col-sm-3 hvr-glow">
-                <br>
-                <br>
-                <img src='./image-assets/macrame-gal-edit.jpeg' id='gal-image'>
-                <p id='gal-description'>Wall Hanging</p>
-            </div>
-            <div class="col-sm-3 hvr-glow">
-                <br>
-                <br>
-                <img src='./image-assets/Screen Shot 2018-10-08 at 12.31.41 PM.png' id='gal-image'>
-                <p id='gal-description'>Plant Hanger On Wicker Wall</p>
-            </div>
-            <div class="col-sm-3 hvr-glow">
-                <br>
-                <br>
-                <img src='./image-assets/Screen Shot 2018-10-08 at 12.32.13 PM.png' id='gal-image'>
-                <p id='gal-description'>Arrow Macrame</p>
-            </div> 
-            <div class="col-sm-3 hvr-glow">
-                <br>
-                <br>
-                <img src='./image-assets/Screen Shot 2018-10-08 at 12.32.19 PM.png' id='gal-image'>
-                <p id='gal-description'>Plant Hangers - Be Still My Soul</p>
-            </div>
-        </div>
-    </div>
-    <div class='gallery'>
-        <div class="row">
-            <div class="col-sm-3 hvr-glow" style='margin-top:15px'>
-                <br>
-                <br>
-                <img src='./image-assets/Screen Shot 2018-10-08 at 12.31.05 PM.png' id='gal-image'>
-                <p id='gal-description'>Wedding Cake Display</p>
-            </div>
-            <div class="col-sm-3 hvr-glow" style='margin-top:15px'>
-                <br>
-                <br>
-                <img src='./image-assets/Screen Shot 2018-10-08 at 12.32.34 PM.png' id='gal-image'>
-                <p id='gal-description'>Beautiful Wall Hanging</p>
-            </div>
-            <div class="col-sm-3 hvr-glow" style='margin-top:15px'>
-                <br>
-                <br>
-                <img src='./image-assets/macrame_edit_crop.jpeg' id='gal-image'>
-                <p id='gal-description'>Plant Hanger</p>
-            </div> 
-            <div class="col-sm-3 hvr-glow" style='margin-top:15px'>
-                <br>
-                <br>
-                <img src='./image-assets/Screen Shot 2018-10-08 at 12.31.24 PM.png' id='gal-image'>
-                <p id='gal-description'>Stunning Wedding Backdrop</p>
-            </div>
-        </div>
-        <br>
-        <div class="row">
-            <div class="col-sm-3 hvr-glow">
-                <br>
-                <br>
-                <img src='./image-assets/macrame-gal-edit.jpeg' id='gal-image'>
-                <p id='gal-description'>Wall Hanging</p>
-            </div>
-            <div class="col-sm-3 hvr-glow">
-                <br>
-                <br>
-                <img src='./image-assets/Screen Shot 2018-10-08 at 12.31.41 PM.png' id='gal-image'>
-                <p id='gal-description'>Plant Hanger On Wicker Wall</p>
-            </div>
-            <div class="col-sm-3 hvr-glow">
-                <br>
-                <br>
-                <img src='./image-assets/Screen Shot 2018-10-08 at 12.32.13 PM.png' id='gal-image'>
-                <p id='gal-description'>Arrow Macrame</p>
-            </div> 
-            <div class="col-sm-3 hvr-glow">
-                <br>
-                <br>
-                <img src='./image-assets/Screen Shot 2018-10-08 at 12.32.19 PM.png' id='gal-image'>
-                <p id='gal-description'>Plant Hangers - Be Still My Soul</p>
-            </div>
-        </div>
-        <br>
-        <br>
-    </div>
-
 </body>
