--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="row">
             <div class="col-sm-12">
                 <a href="#" class="fa fa-facebook hvr-shrink"></a>
-                <a href="#" class="fa fa-instagram hvr-shrink"></a>
+                <a href="https://www.instagram.com/abbottartistry/" class="fa fa-instagram hvr-shrink"></a>
                 <a href="mailto:macramebylizzy@gmail.com" class="fa fa-envelope-o hvr-shrink"></a>
             </div>
         </div>
@@ -118,7 +118,7 @@
                 <br>
                 <img id='featured1b' src='./image-assets/macrame_edit.jpeg'>
             </div>-->
-            <div class="col-sm-12 text-left feature-details">
+            <div class="col-sm-12 text-left feature-detai˜ls">
                 <br>
                 <h3>Who is Abbott Artistry?</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed odio mauris, posuere vel ante a, finibus bibendum quam. Vivamus ultricies convallis mollis. Suspendisse potenti. Etiam efficitur mollis commodo. Vivamus sit amet tortor vel urna maximus rhoncus ac mattis erat. Sed ultrices quam ut pharetra suscipit.</p>
