Changed a lot of things, site is almost done. Created new home page and added responsivity. Still will make a few minor changes after this.

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 </p>
                 <br>
                 <h3>Where Can You Buy Our Products?</h3>
-                <p>You can buy our products <a href='https://www.etsy.com/shop/AbbottArtistry' target='_blank' style='decoration:none'>HERE</a> or by clicking the "Shop" button at the top of this page! You will go directly to our Etsy page where
+                <p>You can buy our products <a href='https://www.etsy.com/shop/AbbottArtistry' target='_blank' style='text-decoration:none'>HERE</a> or by clicking the "Shop" button at the top of this page! You will go directly to our Etsy page where
                     you will be able to search through our selection and order the macrame or craft of your choice! If you see a piece in our gallery
                     that is not on our Etsy page, contact us with the details and we will make a custom piece especially for you!
                 </p>
