Last minute changes

--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
                   <li><a href="#!"><i class='fa fa-close' style='color:#666;'></i></a></li>
                   <li><a href="./index-test.html" style='color:#666;'>Home</a></li>
                   <li class="divider" tabindex="-1"></li>
-                  <li><a href="https://www.etsy.com/shop/AbbottArtistry" style='color:#666;'>Shop</a></li>
+                  <li><a href="https://www.etsy.com/shop/AbbottArtistry" target='_blank' style='color:#666;'>Shop</a></li>
                   <li class="divider" tabindex="-1"></li>
                   <li><a href="./gallery.html" style='color:#666;'>Gallery</a></li>
                   <li class="divider" tabindex="-1"></li>
@@ -55,7 +55,7 @@
             <div class="col-sm-12 text-center top-links">
                 <a href="#" class="fa fa-facebook hvr-shrink"></a>
                 <a href="https://www.instagram.com/abbottartistry/" class="fa fa-instagram hvr-shrink"></a>
-                <a href="tel:4066335122" class="fa fa-phone hvr-shrink" id='phone'></a>
+                <a href="sms:+4066335122" class="fa fa-comment hvr-shrink" id='phone'></a>
                 <a href="mailto:macramebylizzy@gmail.com" class="fa fa-envelope-o hvr-shrink"></a>
 
             </div>
