--- a/index-test.html
+++ b/index-test.html
@@ -38,7 +38,7 @@
                     <li><a href="#!"><i class='fa fa-close' style='color:#666;'></i></a></li>
                     <li><a href="./index-test.html" style='color:#666;'>Home</a></li>
                     <li class="divider" tabindex="-1"></li>
-                    <li><a href="https://www.etsy.com/shop/AbbottArtistry" style='color:#666;'>Shop</a></li>
+                    <li><a href="https://www.etsy.com/shop/AbbottArtistry" target='_blank' style='color:#666;'>Shop</a></li>
                     <li class="divider" tabindex="-1"></li>
                     <li><a href="./gallery.html" style='color:#666;'>Gallery</a></li>
                     <li class="divider" tabindex="-1"></li>
