Files are added to goDaddy and website is up! I want to make a frozen header that shrinks when you scroll down, I'll have to add those later

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="col-sm-12">
                 <a href="#" class="fa fa-facebook hvr-shrink"></a>
                 <a href="https://www.instagram.com/abbottartistry/" class="fa fa-instagram hvr-shrink"></a>
-                <a href="mailto:macramebylizzy@gmail.com" class="fa fa-envelope-o hvr-shrink"></a>
+                <a href="mailto:info@abbottartistry.com" class="fa fa-envelope-o hvr-shrink"></a>
             </div>
         </div>
     </div>
