--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
                 <!-- Dropdown Structure -->
                 <ul id='dropdown1' class='dropdown-content' style='color:black;'>
                   <li><a href="#!"><i class='fa fa-close' style='color:#666;'></i></a></li>
-                  <li><a href="./index-test.html" style='color:#666;'>Home</a></li>
+                  <li><a href="./home.html" style='color:#666;'>Home</a></li>
                   <li class="divider" tabindex="-1"></li>
                   <li><a href="https://www.etsy.com/shop/AbbottArtistry" target='_blank' style='color:#666;'>Shop</a></li>
                   <li class="divider" tabindex="-1"></li>
@@ -48,7 +48,7 @@
         </div>
         <div class="row">
             <div class="col-sm-12 text-center">
-                <a href='./index-test.html'><img class='hvr-grow' id='main-logo' src='./image-assets/abbott-artistry-logo-finished.png'></a>
+                <a href='./home.html'><img class='hvr-grow' id='main-logo' src='./image-assets/abbott-artistry-logo-finished.png'></a>
             </div>
         </div>
         <div class="row" style='position:relative;'>
@@ -56,19 +56,19 @@
                 <a href="#" class="fa fa-facebook hvr-shrink"></a>
                 <a href="https://www.instagram.com/abbottartistry/" class="fa fa-instagram hvr-shrink"></a>
                 <a href="sms:+4066335122" class="fa fa-comment hvr-shrink" id='phone'></a>
-                <a href="mailto:macramebylizzy@gmail.com" class="fa fa-envelope-o hvr-shrink"></a>
+                <a href="mailto:info@abbottartistry.com" class="fa fa-envelope-o hvr-shrink"></a>
 
             </div>
         </div>
         <!-- <div class="row">
             <div class="col-sm-4"></div>
             <div class="col-sm-4 text-center">
-                <a href='./index-test.html'><img class='hvr-grow' id='main-logo' src='./image-assets/abbott-artistry-logo-finished.png'></a>
+                <a href='./home.html'><img class='hvr-grow' id='main-logo' src='./image-assets/abbott-artistry-logo-finished.png'></a>
                 <div class="col-sm-12 top-links">
                     <a href="#" class="fa fa-facebook hvr-shrink"></a>
                     <a href="https://www.instagram.com/abbottartistry/" class="fa fa-instagram hvr-shrink"></a>
                     <a href="tel:4066335122" class="fa fa-phone hvr-shrink" id='phone'></a>
-                    <a href="mailto:macramebylizzy@gmail.com" class="fa fa-envelope-o hvr-shrink"></a>
+                    <a href="mailto:info@abbottartistry.com" class="fa fa-envelope-o hvr-shrink"></a>
                 </div>
             </div>
             <div class="col-sm-4"></div>
@@ -78,18 +78,18 @@
         <div class="row">
             <div class="col-sm-1"></div>
             <div class="col-sm-1 text-center">
-                <a href='./index-test.html' class='link hvr-bob' id='home-link'>Home</a>
+                <a href='./home.html' class='link hvr-bob' id='home-link'>Home</a>
             </div>
             <div class="col-sm-2 text-center">
                 <a href='https://www.etsy.com/shop/AbbottArtistry' target='_blank' class='link hvr-bob' id='product-link'>Shop</a>
             </div>
             <div class="col-sm-4">
-                <a href='./index-test.html'><img class='hvr-grow' id='main-logo' src='./image-assets/abbott-artistry-logo-finished.png'></a>
+                <a href='./home.html'><img class='hvr-grow' id='main-logo' src='./image-assets/abbott-artistry-logo-finished.png'></a>
                 <div class="col-sm-12 top-links">
                     <a href="#" class="fa fa-facebook hvr-shrink"></a>
                     <a href="https://www.instagram.com/abbottartistry/" class="fa fa-instagram hvr-shrink"></a>
                     <a href="tel:4066335122" class="fa fa-phone hvr-shrink" id='phone'></a>
-                    <a href="mailto:macramebylizzy@gmail.com" class="fa fa-envelope-o hvr-shrink"></a>
+                    <a href="mailto:info@abbottartistry.com" class="fa fa-envelope-o hvr-shrink"></a>
                 </div>
             </div>
             <div class="col-sm-2 text-center">
@@ -178,7 +178,7 @@
             <div class="col-sm-12 text-center">
                 <br>
                 <a href="#" style='text-decoration:none;color:white;'><span class="fa fa-phone hvr-shrink"> <span class='good-text'>(435) 503-7540</span></span></a>
-                <a href='mailto:macramebylizzy@gmail.com' style='text-decoration:none;color:white'><span class="fa fa-envelope-o hvr-shrink">  <span class='good-text'>abbottartistry@gmail.com</span></span></a>
+                <a href='mailto:info@abbottartistry.com' style='text-decoration:none;color:white'><span class="fa fa-envelope-o hvr-shrink">  <span class='good-text'>abbottartistry@gmail.com</span></span></a>
             </div>
         </div>
         <div class="row">
