--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel='shortcut icon' href='./image-assets/single-branch-left.png'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="./index-test.css">
+    <link rel="stylesheet" type="text/css" href="./home.css">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Open+Sans+Condensed:300|Satisfy|PT+Sans+Narrow|Amatic+SC" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -36,7 +36,7 @@
                 <!-- Dropdown Structure -->
                 <ul id='dropdown1' class='dropdown-content' style='color:black;'>
                     <li><a href="#!"><i class='fa fa-close' style='color:#666;'></i></a></li>
-                    <li><a href="./index-test.html" style='color:#666;'>Home</a></li>
+                    <li><a href="./home.html" style='color:#666;'>Home</a></li>
                     <li class="divider" tabindex="-1"></li>
                     <li><a href="https://www.etsy.com/shop/AbbottArtistry" target='_blank' style='color:#666;'>Shop</a></li>
                     <li class="divider" tabindex="-1"></li>
@@ -48,7 +48,7 @@
         </div>
         <div class="row">
             <div class="col-sm-12 text-center">
-                <a href='./index-test.html'><img class='hvr-grow' id='main-logo' src='./image-assets/abbott-artistry-logo-finished.png'></a>
+                <a href='./home.html'><img class='hvr-grow' id='main-logo' src='./image-assets/abbott-artistry-logo-finished.png'></a>
             </div>
         </div>
         <div class="row" style='position:relative;'>
@@ -56,14 +56,14 @@
                 <a href="#" class="fa fa-facebook hvr-shrink"></a>
                 <a href="https://www.instagram.com/abbottartistry/" class="fa fa-instagram hvr-shrink"></a>
                 <a href="sms:+14355037540" class="fa fa-comment hvr-shrink" id='phone'></a>
-                <a href="mailto:macramebylizzy@gmail.com" class="fa fa-envelope-o hvr-shrink"></a>
+                <a href="mailto:info@abbottartistry.com" class="fa fa-envelope-o hvr-shrink"></a>
 
             </div>
         </div>
         <!-- <div class="row">
             <div class="col-sm-4"></div>
             <div class="col-sm-4 text-center">
-                <a href='./index-test.html'><img class='hvr-grow' id='main-logo' src='./image-assets/abbott-artistry-logo-finished.png'></a>
+                <a href='./home.html'><img class='hvr-grow' id='main-logo' src='./image-assets/abbott-artistry-logo-finished.png'></a>
                 <div class="col-sm-12 top-links">
                     <a href="#" class="fa fa-facebook hvr-shrink"></a>
                     <a href="https://www.instagram.com/abbottartistry/" class="fa fa-instagram hvr-shrink"></a>
@@ -78,18 +78,18 @@
         <div class="row">
             <div class="col-sm-1"></div>
             <div class="col-sm-1 text-center">
-                <a href='./index-test.html' class='link hvr-bob' id='home-link'>Home</a>
+                <a href='./home.html' class='link hvr-bob' id='home-link'>Home</a>
             </div>
             <div class="col-sm-2 text-center">
                 <a href='https://www.etsy.com/shop/AbbottArtistry' target='_blank' class='link hvr-bob' id='product-link'>Shop</a>
             </div>
             <div class="col-sm-4">
-                <a href='./index-test.html'><img class='hvr-grow' id='main-logo' src='./image-assets/abbott-artistry-logo-finished.png'></a>
+                <a href='./home.html'><img class='hvr-grow' id='main-logo' src='./image-assets/abbott-artistry-logo-finished.png'></a>
                 <div class="col-sm-12 top-links">
                     <a href="#" class="fa fa-facebook hvr-shrink"></a>
                     <a href="https://www.instagram.com/abbottartistry/" class="fa fa-instagram hvr-shrink"></a>
                     <a href="tel:4066335122" class="fa fa-phone hvr-shrink" id='phone'></a>
-                    <a href="mailto:macramebylizzy@gmail.com" class="fa fa-envelope-o hvr-shrink"></a>
+                    <a href="mailto:info@abbottartistry.com" class="fa fa-envelope-o hvr-shrink"></a>
                 </div>
             </div>
             <div class="col-sm-2 text-center">
@@ -271,7 +271,7 @@
                     <li>
                         <div class="collapsible-header"><i class="material-icons">whatshot</i><span class='good-text' style='font-size:20px;'>How Do Custom Orders Work?</span></div>
                         <div class="collapsible-body text-left"><p>You can contact us by sending a <a href='./contact.html' target='_blank' style='text-decoration:none'>message</a>, 
-                        emailing us at <a href='mailto:macramebylizzy@gmail.com' style='text-decoration:none'>macramebylizzy@gmail.com</a>, or by sending a DM on <a href='https://www.instagram.com/AbbottArtistry' target='_blank' style='text-decoration:none'>our Instagram</a></p></div>
+                        emailing us at <a href='mailto:info@abbottartistry.com' style='text-decoration:none'>info@abbottartistry.com</a>, or by sending a DM on <a href='https://www.instagram.com/AbbottArtistry' target='_blank' style='text-decoration:none'>our Instagram</a></p></div>
                     </li>
                 </ul>
             </div>
@@ -374,7 +374,7 @@
             <div class="col-sm-12 text-center">
                 <br>
                 <a href="" style='text-decoration:none;color:white;'><span class="fa fa-comment hvr-shrink"> <span class='good-text'>(435) 503-7540</span></span></a>
-                <a href='mailto:macramebylizzy@gmail.com' style='text-decoration:none;color:white'><span class="fa fa-envelope-o hvr-shrink">  <span class='good-text'>abbottartistry@gmail.com</span></span></a>
+                <a href='mailto:info@abbottartistry.com.com' style='text-decoration:none;color:white'><span class="fa fa-envelope-o hvr-shrink">  <span class='good-text'>abbottartistry@gmail.com</span></span></a>
             </div>
         </div>
         <div class="row">
