--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <title>Macrame and Crafts - Abbott Artistry</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Top Quality Macrame and Crafts from Abbott Artistry">
     <meta name="keywords" content="macrame,crafts,wedding,backdrops,abbott,artistry">
