More fixes to mobile design

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <title>Macrame and Crafts - Abbott Artistry</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Top Quality Macrame and Crafts from Abbott Artistry">
     <meta name="keywords" content="macrame,crafts,wedding,backdrops,abbott,artistry">
@@ -35,7 +35,7 @@
                     <!-- Dropdown Structure -->
                     <ul id='dropdown1' class='dropdown-content' style='color:black;'>
                         <li><a href="#!"><i class='fa fa-close' style='color:#666;'></i></a></li>
-                        <li><a href="./home.html" style='color:#666;'>Home</a></li>
+                        <li><a href="./index.html" style='color:#666;'>Home</a></li>
                         <li class="divider" tabindex="-1"></li>
                         <li><a href="https://www.etsy.com/shop/AbbottArtistry" target='_blank' style='color:#666;'>Shop</a></li>
                         <li class="divider" tabindex="-1"></li>
@@ -47,7 +47,7 @@
             </div>
             <div class="row" id='small-row-logo' style='height:45px;'>
                 <div class="col-sm-12 text-center">
-                    <a href='./home.html'><img class='hvr-grow logo-sm' id='main-logo' src='./image-assets/abbott-artistry-logo-finished.png'></a>
+                    <a href='./index.html'><img class='hvr-grow logo-sm' id='main-logo' src='./image-assets/abbott-artistry-logo-finished.png'></a>
                 </div>
             </div>
             <div class="row" style='position:relative;' id='small-row' style='height:15px;'>
@@ -64,13 +64,13 @@
             <div class="row" id='big-row'>
                 <div class="col-sm-1"></div>
                 <div class="col-sm-1 text-center">
-                    <a href='./home.html' class='link hvr-bob' id='home-link'>Home</a>
+                    <a href='./index.html' class='link hvr-bob' id='home-link'>Home</a>
                 </div>
                 <div class="col-sm-2 text-center">
                     <a href='https://www.etsy.com/shop/AbbottArtistry' target='_blank' class='link hvr-bob' id='product-link'>Shop</a>
                 </div>
                 <div class="col-sm-4">
-                    <a href='./home.html'><img class='hvr-grow logo-bg' id='main-logo' src='./image-assets/abbott-artistry-logo-finished.png'></a>
+                    <a href='./index.html'><img class='hvr-grow logo-bg' id='main-logo' src='./image-assets/abbott-artistry-logo-finished.png'></a>
                     <div class="col-sm-12 top-links bh-links">
                         <a href="https://www.facebook.com/abbottartistrymacrame/" target="_blank" class="fa fa-facebook hvr-shrink"></a>
                         <a href="https://www.instagram.com/abbottartistry/" target="_blank" class="fa fa-instagram hvr-shrink"></a>
