--- a/gallery.html
+++ b/gallery.html
@@ -26,7 +26,7 @@
                         <!-- Dropdown Structure -->
                         <ul id='dropdown1' class='dropdown-content' style='color:black;'>
                             <li><a href="#!"><i class='fa fa-close' style='color:#666;'></i></a></li>
-                            <li><a href="./home.html" style='color:#666;'>Home</a></li>
+                            <li><a href="./index.html" style='color:#666;'>Home</a></li>
                             <li class="divider" tabindex="-1"></li>
                             <li><a href="https://www.etsy.com/shop/AbbottArtistry" target='_blank' style='color:#666;'>Shop</a></li>
                             <li class="divider" tabindex="-1"></li>
@@ -38,7 +38,7 @@
                 </div>
                 <div class="row" id='small-row-logo' style='height:45px;'>
                     <div class="col-sm-12 text-center">
-                        <a href='./home.html'><img class='hvr-grow logo-sm' id='main-logo' src='./image-assets/abbott-artistry-logo-finished.png'></a>
+                        <a href='./index.html'><img class='hvr-grow logo-sm' id='main-logo' src='./image-assets/abbott-artistry-logo-finished.png'></a>
                     </div>
                 </div>
                 <div class="row" style='position:relative;' id='small-row' style='height:15px;'>
@@ -55,13 +55,13 @@
                 <div class="row" id='big-row'>
                     <div class="col-sm-1"></div>
                     <div class="col-sm-1 text-center">
-                        <a href='./home.html' class='link hvr-bob' id='home-link'>Home</a>
+                        <a href='./index.html' class='link hvr-bob' id='home-link'>Home</a>
                     </div>
                     <div class="col-sm-2 text-center">
                         <a href='https://www.etsy.com/shop/AbbottArtistry' target='_blank' class='link hvr-bob' id='product-link'>Shop</a>
                     </div>
                     <div class="col-sm-4">
-                        <a href='./home.html'><img class='hvr-grow logo-bg' id='main-logo' src='./image-assets/abbott-artistry-logo-finished.png'></a>
+                        <a href='./index.html'><img class='hvr-grow logo-bg' id='main-logo' src='./image-assets/abbott-artistry-logo-finished.png'></a>
                         <div class="col-sm-12 top-links bh-links">
                             <a href="https://www.facebook.com/abbottartistrymacrame/" target="_blank" class="fa fa-facebook hvr-shrink"></a>
                             <a href="https://www.instagram.com/abbottartistry/" target="_blank" class="fa fa-instagram hvr-shrink"></a>
